[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.poetry]
name = "pytest-keyring"
version = "1.0.4"
description = "A Pytest plugin to access the system's keyring to provide credentials for tests"
authors = [ "Tomás Farías Santana <tomas@tomasfarias.dev>" ]
readme = "README.md"
classifiers = [
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = "MIT"
repository = "https://github.com/tomasfarias/pytest-keyring"
keywords = [ "keyring", "pytest", "pytest-plugin" ]

[tool.poetry.dependencies]
python = ">=3.8"
pytest = ">=8.0.2"
keyring = ">=24.2"

[tool.poetry.group.dev.dependencies]
black = ">=23.9"
ruff = ">=0.0.289"
mypy = ">=1.5"
secretstorage = ">=3.3"
pre-commit = ">=3.4"
tox = ">=4.11"

[tool.poetry.plugins]
pytest11 = { pytest_keyring = "pytest_keyring" }

[tool.ruff]
per-file-ignores."__init__.py" = [ "F401" ]
per-file-ignores."src/*" = [ "E501" ]

[tool.mypy]
mypy_path = "src"
namespace_packages = false
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
